force-app/main/default/objects/Indirect_Issue_Voucher_Event__e/Indirect_Issue_Voucher_Event__e.object-meta.xml
<CustomObject>
    <description>This event is used for  Indirect Issue of Vouchers</description>
    <label>Indirect Issue Voucher Event</label>
    <pluralLabel>Indirect Issue Voucher Events</pluralLabel>
</CustomObject>