force-app/main/default/objects/Indirect_Issue_Voucher_Event__e/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>