force-app/main/default/objects/Indirect_Issue_Voucher_Event__e/fields/TotalVouchersToIssue__c.field-meta.xml
<CustomField>
    <fullName>TotalVouchersToIssue__c</fullName>
    <label>TotalVouchersToIssue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>